[project]
name = "applied-machine-learning-supervised-learning-3923366"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "shap>=0.47.2",
    "xgboost>=3.0.2",
    "xlrd>=2.0.1",
]
